--- a/resources/static-board.html
+++ b/resources/static-board.html
@@ -689,7 +689,7 @@
           <path transform="rotate(0)" d="M 4.5 75 L 4.5 87 L -4.5 87 L -4.5 75 L 0 48 Z" fill="#000000" stroke="none"
             stroke-linecap="butt" stroke-linejoin="miter" stroke-width="6.75" stroke-dasharray="0"></path>
           <g transform="rotate(0) translate(0 0)">
-            <rect fill="#fde900" transform="translate(-64 0)" height="27" width="32" x="0" y="-12"></rect><text
+            <rect fill="#F0E48D" transform="translate(-64 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-48 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">40</text>
             <rect fill="#71bf44" transform="translate(-32 0)" height="27" width="32" x="0" y="-12"></rect><text
@@ -722,7 +722,7 @@
           <path transform="rotate(300)" d="M 4.5 75 L 4.5 87 L -4.5 87 L -4.5 75 L 0 48 Z" fill="#000000" stroke="none"
             stroke-linecap="butt" stroke-linejoin="miter" stroke-width="6.75" stroke-dasharray="0"></path>
           <g transform="rotate(0) translate(0 0)">
-            <rect fill="#fde900" transform="translate(-72 0)" height="27" width="32" x="0" y="-12"></rect><text
+            <rect fill="#F0E48D" transform="translate(-72 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-56 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">40</text>
             <rect fill="#71bf44" transform="translate(-40 0)" height="27" width="32" x="0" y="-12"></rect><text
@@ -774,7 +774,7 @@
           <path transform="rotate(240)" d="M 4.5 75 L 4.5 87 L -4.5 87 L -4.5 75 L 0 48 Z" fill="#000000" stroke="none"
             stroke-linecap="butt" stroke-linejoin="miter" stroke-width="6.75" stroke-dasharray="0"></path>
           <g transform="rotate(0) translate(0 0)">
-            <rect fill="#fde900" transform="translate(-64 0)" height="27" width="32" x="0" y="-12"></rect><text
+            <rect fill="#F0E48D" transform="translate(-64 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-48 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">40</text>
             <rect fill="#71bf44" transform="translate(-32 0)" height="27" width="32" x="0" y="-12"></rect><text
@@ -803,7 +803,7 @@
           <path transform="rotate(120)" d="M 4.5 75 L 4.5 87 L -4.5 87 L -4.5 75 L 0 48 Z" fill="#000000" stroke="none"
             stroke-linecap="butt" stroke-linejoin="miter" stroke-width="6.75" stroke-dasharray="0"></path>
           <g transform="rotate(0) translate(0 0)">
-            <rect fill="#fde900" transform="translate(-64 0)" height="27" width="32" x="0" y="-12"></rect><text
+            <rect fill="#F0E48D" transform="translate(-64 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-48 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">30</text>
             <rect fill="#71bf44" transform="translate(-32 0)" height="27" width="32" x="0" y="-12"></rect><text
@@ -836,7 +836,7 @@
           <path transform="rotate(60)" d="M 4.5 75 L 4.5 87 L -4.5 87 L -4.5 75 L 0 48 Z" fill="#000000" stroke="none"
             stroke-linecap="butt" stroke-linejoin="miter" stroke-width="6.75" stroke-dasharray="0"></path>
           <g transform="rotate(0) translate(0 0)">
-            <rect fill="#fde900" transform="translate(-72 0)" height="27" width="32" x="0" y="-12"></rect><text
+            <rect fill="#F0E48D" transform="translate(-72 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-56 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">40</text>
             <rect fill="#71bf44" transform="translate(-40 0)" height="27" width="32" x="0" y="-12"></rect><text
@@ -961,7 +961,7 @@
           </path>
         </g>
       </g>
-      <g transform="translate(1150, 533.01)" fill="#fde900" stroke="black" opacity="1">
+      <g transform="translate(1150, 533.01)" fill="#F0E48D" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <path d="M -75.34 43.5 L -43.3 25" stroke="#FFFFFF" stroke-width="12" stroke-dasharray="0"></path>
@@ -1020,7 +1020,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(1450, 359.81)" fill="#fde900" stroke="black" opacity="1">
+      <g transform="translate(1450, 359.81)" fill="#F0E48D" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <path d="M 0 87 L 0 50" stroke="#FFFFFF" stroke-width="12" stroke-dasharray="0"></path>
