--- a/resources/static-board.html
+++ b/resources/static-board.html
@@ -654,7 +654,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(100, 273.21)" fill="#ec232a" stroke="black" opacity="1">
+      <g transform="translate(100, 273.21)" fill="#D4A186" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87" stroke="none"></polygon>
         <path d="M 50,87 H -50"></path>
         <path d="M -50,87 L -100, 0"></path>
@@ -676,7 +676,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(250, 186.6)" fill="#ec232a" stroke="black" opacity="1">
+      <g transform="translate(250, 186.6)" fill="#D4A186" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87" stroke="none"></polygon>
         <path d="M 50,87 H -50"></path>
         <path d="M -100,0 -50,-87"></path>
@@ -710,7 +710,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(100, 619.62)" fill="#ec232a" stroke="black" opacity="1">
+      <g transform="translate(100, 619.62)" fill="#D4A186" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <path transform="rotate(240)" d="M 6 75 L 6 87 L -6 87 L -6 75 L 0 48 Z" fill="#FFFFFF" stroke="none"
@@ -743,7 +743,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(100, 1139.23)" fill="#ec232a" stroke="black" opacity="1">
+      <g transform="translate(100, 1139.23)" fill="#D4A186" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87" stroke="none"></polygon>
         <path d="M 50,87 H -50"></path>
         <path d="M -50,87 L -100, 0"></path>
@@ -757,7 +757,7 @@
             stroke-linecap="butt" stroke-linejoin="miter" stroke-width="6.75" stroke-dasharray="0"></path>
         </g>
       </g>
-      <g transform="translate(250, 1225.83)" fill="#ec232a" stroke="black" opacity="1">
+      <g transform="translate(250, 1225.83)" fill="#D4A186" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87" stroke="none"></polygon>
         <path d="M 50,87 H -50"></path>
         <path d="M -50,87 L -100, 0"></path>
@@ -795,7 +795,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(1150, 1225.83)" fill="#ec232a" stroke="black" opacity="1">
+      <g transform="translate(1150, 1225.83)" fill="#D4A186" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <path transform="rotate(120)" d="M 6 75 L 6 87 L -6 87 L -6 75 L 0 48 Z" fill="#FFFFFF" stroke="none"
@@ -824,7 +824,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(1750, 186.6)" fill="#ec232a" stroke="black" opacity="1">
+      <g transform="translate(1750, 186.6)" fill="#D4A186" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <path transform="rotate(0)" d="M 6 75 L 6 87 L -6 87 L -6 75 L 0 48 Z" fill="#FFFFFF" stroke="none"
