--- a/resources/static-board.html
+++ b/resources/static-board.html
@@ -1,75 +1,75 @@
 <svg id="map" width="975" height="702.5">
   <g transform="scale(0.5)">
     <g id="map-hexes" transform="translate(50 37.5)">
-      <g transform="translate(250, 533.01)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(250, 533.01)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile"></g>
       </g>
-      <g transform="translate(250, 706.22)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(250, 706.22)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile"></g>
       </g>
-      <g transform="translate(250, 879.42)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(250, 879.42)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile"></g>
       </g>
-      <g transform="translate(400, 273.21)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(400, 273.21)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile"></g>
       </g>
-      <g transform="translate(400, 619.62)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(400, 619.62)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile"></g>
       </g>
-      <g transform="translate(400, 792.82)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(400, 792.82)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile"></g>
       </g>
-      <g transform="translate(400, 966.03)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(400, 966.03)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile"></g>
       </g>
-      <g transform="translate(700, 619.62)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(700, 619.62)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile"></g>
       </g>
-      <g transform="translate(700, 792.82)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(700, 792.82)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile"></g>
       </g>
-      <g transform="translate(700, 1139.23)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(700, 1139.23)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile"></g>
       </g>
-      <g transform="translate(850, 533.01)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(850, 533.01)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile"></g>
       </g>
-      <g transform="translate(850, 1052.63)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(850, 1052.63)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile"></g>
       </g>
-      <g transform="translate(1000, 619.62)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(1000, 619.62)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile"></g>
       </g>
-      <g transform="translate(1300, 619.62)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(1300, 619.62)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile"></g>
       </g>
-      <g transform="translate(1450, 706.22)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(1450, 706.22)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile"></g>
       </g>
-      <g transform="translate(1450, 879.42)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(1450, 879.42)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile"></g>
       </g>
-      <g transform="translate(1750, 359.81)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(1750, 359.81)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile"></g>
       </g>
-      <g transform="translate(850, 359.81)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(850, 359.81)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="translate(0 0) scale(1.5) rotate(0)"><text fill="black" dominant-baseline="baseline" x="0"
@@ -82,7 +82,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(1000, 446.41)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(1000, 446.41)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="translate(0 0) scale(1.5) rotate(0)"><text fill="black" dominant-baseline="baseline" x="0"
@@ -95,7 +95,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(1150, 186.6)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(1150, 186.6)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="translate(0 0) scale(1.5) rotate(0)"><text fill="black" dominant-baseline="baseline" x="0"
@@ -108,7 +108,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(1300, 273.21)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(1300, 273.21)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="translate(0 0) scale(1.5) rotate(0)"><text fill="black" dominant-baseline="baseline" x="0"
@@ -121,7 +121,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(250, 1052.63)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(250, 1052.63)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="rotate(0)">
@@ -131,7 +131,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(550, 359.81)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(550, 359.81)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="rotate(0)">
@@ -141,7 +141,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(550, 533.01)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(550, 533.01)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="rotate(0)">
@@ -151,7 +151,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(550, 879.42)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(550, 879.42)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="rotate(0)">
@@ -161,7 +161,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(700, 446.41)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(700, 446.41)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="rotate(0)">
@@ -171,7 +171,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(850, 879.42)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(850, 879.42)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="rotate(0)">
@@ -184,7 +184,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(1000, 792.82)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(1000, 792.82)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="rotate(0)">
@@ -197,7 +197,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(1000, 966.03)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(1000, 966.03)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="rotate(0)">
@@ -210,7 +210,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(1150, 1052.63)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(1150, 1052.63)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="rotate(0)">
@@ -223,7 +223,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(250, 359.81)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(250, 359.81)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g>
@@ -247,7 +247,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(1600, 273.21)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(1600, 273.21)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g>
@@ -278,7 +278,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(1600, 446.41)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(1600, 446.41)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g>
@@ -301,7 +301,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(400, 446.41)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(400, 446.41)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="translate(0 0) rotate(0)">
@@ -321,7 +321,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(550, 1052.63)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(550, 1052.63)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="translate(0 0) rotate(0)">
@@ -341,7 +341,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(700, 273.21)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(700, 273.21)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="translate(0 0) rotate(0)">
@@ -361,7 +361,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(850, 186.6)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(850, 186.6)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="translate(0 0) rotate(0)">
@@ -382,7 +382,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(1000, 1139.23)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(1000, 1139.23)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="translate(0 0) rotate(0)">
@@ -403,7 +403,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(1450, 186.6)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(1450, 186.6)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="translate(0 0) rotate(0)">
@@ -424,7 +424,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(400, 1139.23)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(400, 1139.23)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="translate(0 0) rotate(0)">
@@ -450,7 +450,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(550, 186.6)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(550, 186.6)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="translate(0 0) rotate(0)">
@@ -483,7 +483,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(550, 706.22)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(550, 706.22)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="translate(0 0) rotate(0)">
@@ -508,7 +508,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(700, 966.03)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(700, 966.03)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g>
@@ -525,7 +525,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(850, 706.22)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(850, 706.22)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="translate(0 0) rotate(0)">
@@ -546,7 +546,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(1000, 273.21)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(1000, 273.21)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g>
@@ -571,7 +571,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(1300, 446.41)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(1300, 446.41)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g>
@@ -596,7 +596,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(1150, 359.81)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(1150, 359.81)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="translate(0 0) rotate(0)">
@@ -625,7 +625,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(1450, 533.01)" fill="#EAE0C8" stroke="black" opacity="1">
+      <g transform="translate(1450, 533.01)" fill="#D1DFC1" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <g transform="translate(0 0) rotate(0)">
