--- a/resources/static-board.html
+++ b/resources/static-board.html
@@ -692,7 +692,7 @@
             <rect fill="#F0E48D" transform="translate(-64 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-48 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">40</text>
-            <rect fill="#71bf44" transform="translate(-32 0)" height="27" width="32" x="0" y="-12"></rect><text
+            <rect fill="#70BF44" transform="translate(-32 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-16 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">50</text>
             <rect fill="#cb7745" transform="translate(0 0)" height="27" width="32" x="0" y="-12"></rect><text
@@ -725,7 +725,7 @@
             <rect fill="#F0E48D" transform="translate(-72 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-56 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">40</text>
-            <rect fill="#71bf44" transform="translate(-40 0)" height="27" width="32" x="0" y="-12"></rect><text
+            <rect fill="#70BF44" transform="translate(-40 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-24 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">60</text>
             <rect fill="#cb7745" transform="translate(-8 0)" height="27" width="32" x="0" y="-12"></rect><text
@@ -777,7 +777,7 @@
             <rect fill="#F0E48D" transform="translate(-64 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-48 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">40</text>
-            <rect fill="#71bf44" transform="translate(-32 0)" height="27" width="32" x="0" y="-12"></rect><text
+            <rect fill="#70BF44" transform="translate(-32 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-16 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">50</text>
             <rect fill="#cb7745" transform="translate(0 0)" height="27" width="32" x="0" y="-12"></rect><text
@@ -806,7 +806,7 @@
             <rect fill="#F0E48D" transform="translate(-64 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-48 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">30</text>
-            <rect fill="#71bf44" transform="translate(-32 0)" height="27" width="32" x="0" y="-12"></rect><text
+            <rect fill="#70BF44" transform="translate(-32 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-16 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">40</text>
             <rect fill="#cb7745" transform="translate(0 0)" height="27" width="32" x="0" y="-12"></rect><text
@@ -839,7 +839,7 @@
             <rect fill="#F0E48D" transform="translate(-72 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-56 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">40</text>
-            <rect fill="#71bf44" transform="translate(-40 0)" height="27" width="32" x="0" y="-12"></rect><text
+            <rect fill="#70BF44" transform="translate(-40 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-24 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">60</text>
             <rect fill="#cb7745" transform="translate(-8 0)" height="27" width="32" x="0" y="-12"></rect><text
