--- a/resources/static-board.html
+++ b/resources/static-board.html
@@ -126,7 +126,7 @@
         <g class="tile">
           <g transform="rotate(0)">
             <g transform="translate(0 0)"><text class="number" fill="black">80</text>
-              <polygon transform="translate(-10 5)" fill="#cb7745" points="0,20 10,0 20,20"></polygon>
+              <polygon transform="translate(-10 5)" fill="#C97646" points="0,20 10,0 20,20"></polygon>
             </g>
           </g>
         </g>
@@ -136,7 +136,7 @@
         <g class="tile">
           <g transform="rotate(0)">
             <g transform="translate(0 0)"><text class="number" fill="black">80</text>
-              <polygon transform="translate(-10 5)" fill="#cb7745" points="0,20 10,0 20,20"></polygon>
+              <polygon transform="translate(-10 5)" fill="#C97646" points="0,20 10,0 20,20"></polygon>
             </g>
           </g>
         </g>
@@ -146,7 +146,7 @@
         <g class="tile">
           <g transform="rotate(0)">
             <g transform="translate(0 0)"><text class="number" fill="black">80</text>
-              <polygon transform="translate(-10 5)" fill="#cb7745" points="0,20 10,0 20,20"></polygon>
+              <polygon transform="translate(-10 5)" fill="#C97646" points="0,20 10,0 20,20"></polygon>
             </g>
           </g>
         </g>
@@ -156,7 +156,7 @@
         <g class="tile">
           <g transform="rotate(0)">
             <g transform="translate(0 0)"><text class="number" fill="black">80</text>
-              <polygon transform="translate(-10 5)" fill="#cb7745" points="0,20 10,0 20,20"></polygon>
+              <polygon transform="translate(-10 5)" fill="#C97646" points="0,20 10,0 20,20"></polygon>
             </g>
           </g>
         </g>
@@ -166,7 +166,7 @@
         <g class="tile">
           <g transform="rotate(0)">
             <g transform="translate(0 0)"><text class="number" fill="black">80</text>
-              <polygon transform="translate(-10 5)" fill="#cb7745" points="0,20 10,0 20,20"></polygon>
+              <polygon transform="translate(-10 5)" fill="#C97646" points="0,20 10,0 20,20"></polygon>
             </g>
           </g>
         </g>
@@ -439,7 +439,7 @@
           </g>
           <g transform="rotate(0)">
             <g transform="translate(30 -60)"><text class="number" fill="black">80</text>
-              <polygon transform="translate(-10 5)" fill="#cb7745" points="0,20 10,0 20,20"></polygon>
+              <polygon transform="translate(-10 5)" fill="#C97646" points="0,20 10,0 20,20"></polygon>
             </g>
           </g>
           <g transform="rotate(0)">
@@ -464,7 +464,7 @@
           </g>
           <g transform="rotate(0)">
             <g transform="translate(30 -60)"><text class="number" fill="black">80</text>
-              <polygon transform="translate(-10 5)" fill="#cb7745" points="0,20 10,0 20,20"></polygon>
+              <polygon transform="translate(-10 5)" fill="#C97646" points="0,20 10,0 20,20"></polygon>
             </g>
           </g>
           <g transform="translate(-65 5) scale(1) rotate(0)"><text fill="black" dominant-baseline="baseline" x="0"
@@ -497,7 +497,7 @@
           </g>
           <g transform="rotate(0)">
             <g transform="translate(30 -60)"><text class="number" fill="black">80</text>
-              <polygon transform="translate(-10 5)" fill="#cb7745" points="0,20 10,0 20,20"></polygon>
+              <polygon transform="translate(-10 5)" fill="#C97646" points="0,20 10,0 20,20"></polygon>
             </g>
           </g>
           <g transform="rotate(0)">
@@ -695,7 +695,7 @@
             <rect fill="#70BF44" transform="translate(-32 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-16 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">50</text>
-            <rect fill="#cb7745" transform="translate(0 0)" height="27" width="32" x="0" y="-12"></rect><text
+            <rect fill="#C97646" transform="translate(0 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(16 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">60</text>
             <rect fill="#bcbdc0" transform="translate(32 0)" height="27" width="32" x="0" y="-12"></rect><text
@@ -728,7 +728,7 @@
             <rect fill="#70BF44" transform="translate(-40 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-24 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">60</text>
-            <rect fill="#cb7745" transform="translate(-8 0)" height="27" width="32" x="0" y="-12"></rect><text
+            <rect fill="#C97646" transform="translate(-8 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(8 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">80</text>
             <rect fill="#bcbdc0" transform="translate(24 0)" height="27" width="48" x="0" y="-12"></rect><text
@@ -780,7 +780,7 @@
             <rect fill="#70BF44" transform="translate(-32 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-16 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">50</text>
-            <rect fill="#cb7745" transform="translate(0 0)" height="27" width="32" x="0" y="-12"></rect><text
+            <rect fill="#C97646" transform="translate(0 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(16 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">60</text>
             <rect fill="#bcbdc0" transform="translate(32 0)" height="27" width="32" x="0" y="-12"></rect><text
@@ -809,7 +809,7 @@
             <rect fill="#70BF44" transform="translate(-32 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-16 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">40</text>
-            <rect fill="#cb7745" transform="translate(0 0)" height="27" width="32" x="0" y="-12"></rect><text
+            <rect fill="#C97646" transform="translate(0 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(16 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">50</text>
             <rect fill="#bcbdc0" transform="translate(32 0)" height="27" width="32" x="0" y="-12"></rect><text
@@ -842,7 +842,7 @@
             <rect fill="#70BF44" transform="translate(-40 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(-24 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">60</text>
-            <rect fill="#cb7745" transform="translate(-8 0)" height="27" width="32" x="0" y="-12"></rect><text
+            <rect fill="#C97646" transform="translate(-8 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(8 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">80</text>
             <rect fill="#bcbdc0" transform="translate(24 0)" height="27" width="48" x="0" y="-12"></rect><text
