--- a/resources/static-board.html
+++ b/resources/static-board.html
@@ -698,7 +698,7 @@
             <rect fill="#C97646" transform="translate(0 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(16 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">60</text>
-            <rect fill="#bcbdc0" transform="translate(32 0)" height="27" width="32" x="0" y="-12"></rect><text
+            <rect fill="#CCCEC2" transform="translate(32 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(48 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">80</text>
           </g>
@@ -731,7 +731,7 @@
             <rect fill="#C97646" transform="translate(-8 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(8 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">80</text>
-            <rect fill="#bcbdc0" transform="translate(24 0)" height="27" width="48" x="0" y="-12"></rect><text
+            <rect fill="#CCCEC2" transform="translate(24 0)" height="27" width="48" x="0" y="-12"></rect><text
               class="number" transform="translate(48 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">100</text>
           </g>
@@ -783,7 +783,7 @@
             <rect fill="#C97646" transform="translate(0 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(16 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">60</text>
-            <rect fill="#bcbdc0" transform="translate(32 0)" height="27" width="32" x="0" y="-12"></rect><text
+            <rect fill="#CCCEC2" transform="translate(32 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(48 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">80</text>
           </g>
@@ -812,7 +812,7 @@
             <rect fill="#C97646" transform="translate(0 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(16 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">50</text>
-            <rect fill="#bcbdc0" transform="translate(32 0)" height="27" width="32" x="0" y="-12"></rect><text
+            <rect fill="#CCCEC2" transform="translate(32 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(48 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">60</text>
           </g>
@@ -845,7 +845,7 @@
             <rect fill="#C97646" transform="translate(-8 0)" height="27" width="32" x="0" y="-12"></rect><text
               class="number" transform="translate(8 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">80</text>
-            <rect fill="#bcbdc0" transform="translate(24 0)" height="27" width="48" x="0" y="-12"></rect><text
+            <rect fill="#CCCEC2" transform="translate(24 0)" height="27" width="48" x="0" y="-12"></rect><text
               class="number" transform="translate(48 0)" fill="#000000" stroke="#000000"
               dominant-baseline="central">100</text>
           </g>
@@ -857,7 +857,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(700, 100)" fill="#bcbdc0" stroke="black" opacity="1">
+      <g transform="translate(700, 100)" fill="#CCCEC2" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <path d="M -75.34 43.5 A 150.67 150.67 0 0 1 75.34 43.5" stroke="#FFFFFF" stroke-width="12"
@@ -866,7 +866,7 @@
             stroke-dasharray="0"></path>
         </g>
       </g>
-      <g transform="translate(850, 1225.83)" fill="#bcbdc0" stroke="black" opacity="1">
+      <g transform="translate(850, 1225.83)" fill="#CCCEC2" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <path d="M 0 -87 A 50.23 50.23 0 0 0 75.34 -43.5" stroke="#FFFFFF" stroke-width="12" stroke-dasharray="0">
@@ -875,7 +875,7 @@
           </path>
         </g>
       </g>
-      <g transform="translate(1000, 100)" fill="#bcbdc0" stroke="black" opacity="1">
+      <g transform="translate(1000, 100)" fill="#CCCEC2" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <path d="M -75.34 43.5 A 150.67 150.67 0 0 1 75.34 43.5" stroke="#FFFFFF" stroke-width="12"
@@ -888,7 +888,7 @@
           </path>
         </g>
       </g>
-      <g transform="translate(1300, 792.82)" fill="#bcbdc0" stroke="black" opacity="1">
+      <g transform="translate(1300, 792.82)" fill="#CCCEC2" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <path d="M 0 -87 A 151.54 151.54 0 0 0 20.09 -11.6" stroke="#FFFFFF" stroke-width="12" stroke-dasharray="0">
@@ -921,7 +921,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(1600, 100)" fill="#bcbdc0" stroke="black" opacity="1">
+      <g transform="translate(1600, 100)" fill="#CCCEC2" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <path d="M 0 87 A 50.69 50.69 0 0 0 -25 43.3" stroke="#FFFFFF" stroke-width="12" stroke-dasharray="0"></path>
@@ -952,7 +952,7 @@
           </g>
         </g>
       </g>
-      <g transform="translate(1600, 619.62)" fill="#bcbdc0" stroke="black" opacity="1">
+      <g transform="translate(1600, 619.62)" fill="#CCCEC2" stroke="black" opacity="1">
         <polygon points="100,0 50,87 -50,87 -100,0 -50,-87 50,-87"></polygon>
         <g class="tile">
           <path d="M -75.34 -43.5 A 50.23 50.23 0 0 0 0 -87" stroke="#FFFFFF" stroke-width="12" stroke-dasharray="0">
